movietime/movie-src/main/objects/Movie__c/fields/Backdrop__c.field-meta.xml
<CustomField>
    <fullName>Backdrop__c</fullName>
    <label>Backdrop</label>
    <type>Url</type>
</CustomField>