movietime/movie-src/main/objects/Movie__c/fields/Collection_Poster__c.field-meta.xml
<CustomField>
    <fullName>Collection_Poster__c</fullName>
    <label>Collection Poster</label>
    <type>Url</type>
</CustomField>