movietime/movie-src/main/objects/Movie__c/fields/Combined_Rating__c.field-meta.xml
<CustomField>
    <fullName>Combined_Rating__c</fullName>
    <formula>IF(NOT(ISBLANK(Baby_Harimau_Rating__c)),
(Harimau_Rating__c+Baby_Harimau_Rating__c)/2,
Harimau_Rating__c)

/*
IF(

AND(
NOT(ISBLANK(Baby_Harimau_Rating__c)),
NOT(ISBLANK(Luis_Rating__c))),
(Harimau_Rating__c+Baby_Harimau_Rating__c+Luis_Rating__c)/3,

IF(
NOT(ISBLANK(Baby_Harimau_Rating__c)),
(Harimau_Rating__c+Baby_Harimau_Rating__c)/2,

IF(
NOT(ISBLANK(Luis_Rating__c)),
(Harimau_Rating__c+Luis_Rating__c)/2,

Harimau_Rating__c)))
*/</formula>
    <label>Combined Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>