movietime/movie-src/main/objects/Movie__c/fields/Concessions_Item_s__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Item_s__c</fullName>
    <label>Concessions Item(s)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bought_Concessions__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ICEE</fullName>
            </value>
            <value>
                <fullName>Popcorn</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>