movietime/movie-src/main/objects/Movie__c/fields/Concessions_Total__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Total__c</fullName>
    <label>Concessions Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>