movietime/movie-src/main/objects/Movie__c/fields/Get_Home_Release_Date_Call_Out_Made__c.field-meta.xml
<CustomField>
    <fullName>Get_Home_Release_Date_Call_Out_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Home Release Date Call Out Made</label>
    <type>Checkbox</type>
</CustomField>