movietime/movie-src/main/objects/Movie__c/fields/Get_Id_Callout_Made__c.field-meta.xml
<CustomField>
    <fullName>Get_Id_Callout_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Id Callout Made</label>
    <type>Checkbox</type>
</CustomField>