movietime/movie-src/main/objects/Movie__c/fields/Luis_Rating__c.field-meta.xml
<CustomField>
    <fullName>Luis_Rating__c</fullName>
    <label>Luis Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>