movietime/movie-src/main/objects/Movie__c/fields/Money_Rating__c.field-meta.xml
<CustomField>
    <fullName>Money_Rating__c</fullName>
    <label>Money Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Would Pay Again</fullName>
            </value>
            <value>
                <fullName>Worth Full Ticket Price</fullName>
            </value>
            <value>
                <fullName>Worth Costco Ticket</fullName>
            </value>
            <value>
                <fullName>Worth 5 Dollars</fullName>
            </value>
            <value>
                <fullName>Why did I Pay for This?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>