movietime/movie-src/main/objects/Movie__c/fields/Production_Country__c.field-meta.xml
<CustomField>
    <fullName>Production_Country__c</fullName>
    <label>Production Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>