movietime/movie-src/main/objects/Movie__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(Combined_Rating__c &gt;= 4.75,IMAGE(&quot;/resource/Stars5&quot;, &quot;5 Stars&quot;),
IF(Combined_Rating__c &gt;= 4.25,IMAGE(&quot;/resource/Stars4_5&quot;, &quot;4.5 Stars&quot;),
IF(Combined_Rating__c &gt;= 3.75,IMAGE(&quot;/resource/Stars4&quot;, &quot;4 Stars&quot;),
IF(Combined_Rating__c &gt;= 3.25,IMAGE(&quot;/resource/Stars3_5&quot;, &quot;3.5 Stars&quot;),
IF(Combined_Rating__c &gt;= 2.75,IMAGE(&quot;/resource/Stars3&quot;, &quot;3 Stars&quot;),
IF(Combined_Rating__c &gt;= 2.25,IMAGE(&quot;/resource/Stars2_5&quot;, &quot;2.5 Stars&quot;),
IF(Combined_Rating__c &gt;= 1.75,IMAGE(&quot;/resource/Stars2&quot;, &quot;2 Stars&quot;),
IF(Combined_Rating__c &gt;= 1.25,IMAGE(&quot;/resource/Stars1_5&quot;, &quot;1.5 Stars&quot;),
IF(Combined_Rating__c &gt;= 0.75,IMAGE(&quot;/resource/Stars1&quot;, &quot;1 Star&quot;),
IF(Combined_Rating__c &gt;= 0.25,IMAGE(&quot;/resource/Stars_5&quot;, &quot;0.5 Star&quot;),
IMAGE(&quot;/resource/Stars0&quot;, &quot;0 Stars&quot;)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>