movietime/movie-src/main/objects/Movie__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <label>Theater</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alameda Theatre &amp; Cineplex</fullName>
            </value>
            <value>
                <fullName>AMC - Bay Street</fullName>
            </value>
            <value>
                <fullName>AMC - Metreon</fullName>
            </value>
            <value>
                <fullName>Century - Bayfair Mall</fullName>
            </value>
            <value>
                <fullName>Century - Daily City</fullName>
            </value>
            <value>
                <fullName>Century - Great Mall</fullName>
            </value>
            <value>
                <fullName>Century - Hayward</fullName>
            </value>
            <value>
                <fullName>Century - Hilltop</fullName>
            </value>
            <value>
                <fullName>Century - Pleasanton</fullName>
            </value>
            <value>
                <fullName>Century - San Mateo</fullName>
            </value>
            <value>
                <fullName>Century - Tanforan</fullName>
            </value>
            <value>
                <fullName>Century - Union Landing</fullName>
            </value>
            <value>
                <fullName>Century - Walnut Creek</fullName>
            </value>
            <value>
                <fullName>Century - Westfield SF</fullName>
            </value>
            <value>
                <fullName>Dinuba</fullName>
            </value>
            <value>
                <fullName>Grand Lake</fullName>
            </value>
            <value>
                <fullName>Regal - Berkeley</fullName>
            </value>
            <value>
                <fullName>Regal - Emery Bay</fullName>
            </value>
            <value>
                <fullName>Regal - Fresno</fullName>
            </value>
            <value>
                <fullName>Regal - Hacienda</fullName>
            </value>
            <value>
                <fullName>Regal - Jack London</fullName>
            </value>
            <value>
                <fullName>Regal - Visalia</fullName>
            </value>
            <value>
                <fullName>Shattuck Cinema</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>