movietime/movie-src/main/objects/Movie__c/fields/View_Date__c.field-meta.xml
<CustomField>
    <fullName>View_Date__c</fullName>
    <label>View Date</label>
    <type>Date</type>
</CustomField>