movietime/movie-src/main/objects/Movie__c/fields/Watched__c.field-meta.xml
<CustomField>
    <fullName>Watched__c</fullName>
    <label>Watched</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Together</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>With Broskies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>