movietime/movie-src/main/objects/Movie__c/recordTypes/Home_Theater.recordType-meta.xml
<RecordType>
    <fullName>Home_Theater</fullName>
    <active>true</active>
    <description>Movies that we saw at home</description>
    <label>Home Theater</label>
</RecordType>