movietime/movie-src/main/objects/Movie__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Combined_Rating__c</columns>
    <columns>TMDB_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>