movietime/movie-src/main/objects/Movie__c/listViews/Box_Office.listView-meta.xml
<ListView>
    <fullName>Box_Office</fullName>
    <columns>NAME</columns>
    <columns>Release_Date__c</columns>
    <columns>Digital_Copy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Movie__c.Box_Office</value>
    </filters>
    <label>Box Office</label>
</ListView>